--- a/src/pages/auth/styles.module.scss
+++ b/src/pages/auth/styles.module.scss
@@ -17,3 +17,44 @@
   }
 }
 
+.formPasswordIcon {
+  &:hover {
+    cursor: pointer
+  }
+}
+
+.forgotPasswordLink {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #4972CF;
+}
+
+.forgotAuthorizationLink {
+  display: block;
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  text-align: center;
+  color: #91F230;
+  margin-top: 32px;
+}
+
+.forgotSuccessText {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  color: #FFFFFF;
+  margin: 40px 0 0;
+
+  & span {
+    color: #91F230;
+  }
+}
