--- a/src/components/modal/styles.module.scss
+++ b/src/components/modal/styles.module.scss
@@ -8,7 +8,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #0D1114;
 }
 
 .overlay {
@@ -20,6 +19,7 @@
 }
 
 .content {
+  position: relative;
   padding: 48px;
   background: radial-gradient(63.76% 100% at 100% 100%, #2A1F29 0%, #1B1F26 100%);
   border-radius: 16px;
