--- a/src/layouts/styles.module.scss
+++ b/src/layouts/styles.module.scss
@@ -16,6 +16,7 @@
 .pageContent {
   min-width: 1170px;
   width: calc(100vw - 240px);
-  overflow-y: auto;
+  overflow: hidden;
+  //overflow-y: auto;
   padding: 0 48px;
 }
