--- a/src/pages/payments/components/styles.module.scss
+++ b/src/pages/payments/components/styles.module.scss
@@ -34,7 +34,7 @@
 
 .tableItemHeader {
   display: flex;
-  padding: 24px 0;
+  padding: 24px 0 0 0;
 }
 
 .item {
@@ -106,4 +106,13 @@
     padding-right: 15px;
     padding-left: 15px;
   }
+}
+
+.loader {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #FFFFFF;
 }
