--- a/src/fields/styles.module.scss
+++ b/src/fields/styles.module.scss
@@ -80,7 +80,85 @@
   font-weight: 600;
   font-size: 28px;
   line-height: 34px;
-  text-align: center;
   color: #FFFFFF;
   margin: 0;
+}
+
+.switcher {
+  display: flex;
+
+  &Column {
+    flex-direction: column;
+  }
+
+  &Label {
+    font-family: Inter, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #FFFFFF;
+    margin-right: 12px;
+    display: inline-block;
+  }
+}
+
+.select {
+  position: relative;
+  width: 100%;
+  height: 48px;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+
+  &:hover {
+    cursor: pointer
+  }
+
+  &Output {
+    width: 100%;
+    font-family: Inter, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #FFFFFF;
+    display: block;
+    //padding: 0 16px;
+
+    &::placeholder {
+      color: #303740;
+    }
+  }
+
+  &List {
+    position: absolute;
+    width: 100%;
+    background: #303740;
+    border-radius: 12px;
+    padding: 8px 0;
+    top: 43px;
+    right: 0;
+    left: 0;
+    z-index: 100;
+  }
+
+  &Item {
+    font-family: Inter, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    padding: 8px 16px;
+    transition: .3s;
+
+    &:hover {
+      background-color: #0D1114;
+      cursor: pointer;
+      transition: .3s;
+    }
+  }
 }
