--- a/src/pages/banks/components/styles.module.scss
+++ b/src/pages/banks/components/styles.module.scss
@@ -13,6 +13,13 @@
   margin-bottom: 24px;
 }
 
+.infinityContainer {
+  display: flex;
+  flex-wrap: wrap;
+  width: calc(100vw - 320px);
+  min-width: 1170px;
+}
+
 .bankCard {
   width: 100%;
   background: radial-gradient(63.76% 100% at 100% 100%, #222C27 0%, #1B1F26 100%);
