--- a/src/components/changeableField/styles.module.scss
+++ b/src/components/changeableField/styles.module.scss
@@ -8,6 +8,15 @@
     align-items: center;
   }
 
+  &Text {
+    font-family: Inter, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #667180;
+  }
+
   &Icon {
     margin-left: 16px;
 
@@ -22,11 +31,10 @@
     font-family: Inter, sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
-    line-height: 34px;
     color: #FFFFFF;
     padding: 0 16px;
     border: 1px solid #667180;
     border-radius: 12px;
+    min-width: 100px;
   }
 }
