--- a/src/pages/banks/components/styles.module.scss
+++ b/src/pages/banks/components/styles.module.scss
@@ -13,12 +13,6 @@
   margin-bottom: 24px;
 }
 
-.infinityContainer {
-  display: flex;
-  flex-wrap: wrap;
-  width: calc(100vw - 320px);
-  min-width: 1170px;
-}
 
 .bankCard {
   width: 100%;
@@ -143,14 +137,26 @@
   }
 
   &ListText {
-    display: block;
-    width: 50%;
+    display: flex;
+    align-items: center;
+    max-width: 50%;
+    width: 100%;
     font-family: Inter, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
     line-height: 26px;
     color: #FFFFFF;
+
+    &ButtonType {
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    &Green {
+      color: #91F230;
+    }
   }
 
   &Buttons {
