--- a/src/layouts/styles.module.scss
+++ b/src/layouts/styles.module.scss
@@ -18,6 +18,16 @@
   min-width: 1170px;
   width: calc(100vw - 240px);
   overflow: hidden;
-  //overflow-y: auto;
+  overflow-y: auto;
   padding: 0 48px;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+    background: #1B1F26;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background: #91F230;
+  }
 }
