Fixed the display button

--- a/src/pages/settings/components/styles.module.scss
+++ b/src/pages/settings/components/styles.module.scss
@@ -13,7 +13,7 @@
   }
 
   &Button {
-    background: #303740;
+    background: #91F230;
     border-radius: 12px;
     font-family: Inter, sans-serif;
     font-style: normal;
