--- a/src/components/changePassword/styles.module.scss
+++ b/src/components/changePassword/styles.module.scss
@@ -1,4 +1,8 @@
 .form {
+  width: 472px;
+  padding: 40px 50px;
+  background: radial-gradient(63.76% 100% at 100% 100%, #222C27 0%, #1B1F26 100%);
+  border-radius: 16px;
 
   &ButtonWRapper {
     display: flex;
