--- a/src/fields/styles.module.scss
+++ b/src/fields/styles.module.scss
@@ -158,7 +158,7 @@
 
   &List {
     position: absolute;
-    width: 100%;
+    width: 200px;
     background: #303740;
     border-radius: 12px;
     padding: 8px 0;
