--- a/src/layouts/styles.module.scss
+++ b/src/layouts/styles.module.scss
@@ -18,7 +18,7 @@
   min-width: 1170px;
   width: calc(100vw - 240px);
   overflow: hidden;
-  overflow-y: auto;
+ // overflow-y: auto;
   padding: 0 48px;
 
   &::-webkit-scrollbar {
