--- a/src/components/listCard/styles.module.scss
+++ b/src/components/listCard/styles.module.scss
@@ -4,6 +4,7 @@
   padding: 20px 24px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   min-height: 190px;
 
   &Item {
