--- a/src/pages/simBanks/componetns/styles.module.scss
+++ b/src/pages/simBanks/componetns/styles.module.scss
@@ -3,6 +3,7 @@
   border-radius: 12px;
   padding: 32px;
   margin-bottom: 16px;
+  max-width: 980px;
 
   &Content {
     display: flex;
@@ -58,6 +59,7 @@
     font-size: 16px;
     line-height: 26px;
     color: #FFFFFF;
+    margin-top: 0;
   }
 }
 
