--- a/src/styles/lauoyts.scss
+++ b/src/styles/lauoyts.scss
@@ -92,3 +92,28 @@
     background: #91F230;
   }
 }
+
+.label {
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #667180;
+  margin-bottom: 4px;
+}
+
+.input {
+  width: 100%;
+  padding: 14px 11px;
+  border-radius: 12px;
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  color: #FFFFFF;
+
+  &::placeholder {
+    color: #303740;
+  }
+}
