--- a/src/pages/statistics/components/styles.module.scss
+++ b/src/pages/statistics/components/styles.module.scss
@@ -260,6 +260,17 @@
     font-weight: 400;
     line-height: 24px;
   }
+
+  &__span{
+    color: #667180;
+    font-family: Inter, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    display: inline-block;
+    padding: 0 10px;
+  }
 }
 
 .selectBanks {
@@ -320,5 +331,14 @@
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
+  }
+}
+
+.rangeDate{
+  display: flex;
+  align-items: center;
+
+  & p:last-of-type {
+    margin-right: 10px;
   }
 }
