--- a/src/pages/payments/components/styles.module.scss
+++ b/src/pages/payments/components/styles.module.scss
@@ -101,7 +101,6 @@
 .searchByCard {
   display: flex;
   align-items: flex-end;
-  justify-content: space-between;
   //max-width: 720px;
   width: 100%;
   margin-right: -15px;
@@ -116,6 +115,7 @@
     &:last-of-type{
       display: flex;
       justify-content: flex-end;
+      margin-left: auto;
     }
   }
 
