--- a/src/pages/deposits/components/styles.module.scss
+++ b/src/pages/deposits/components/styles.module.scss
@@ -129,8 +129,8 @@
   }
 
   &QrCodeImage {
-    width: 320px;
-    height: 320px;
+    //width: 320px;
+    //height: 320px;
     object-fit: contain;
   }
 
